fix navbar spacing

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -33,8 +33,9 @@
     align-items: center;
     height: 100%;
     justify-content: space-between;
-    margin-left: 0px;
-    margin-right: -245px; /* default -180 */
+    margin-left: -50px; /*default 0 */
+    margin-right: -285px; /* default -180 */
+    
 
     /* border: 2px solid white; */
     
